fixed menu bar style

--- a/css/style.css
+++ b/css/style.css
@@ -7307,7 +7307,7 @@ h1, h2, h3, h4, h5,
   top: 30px; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light {
-      background: #000 !important;
+      background: white !important;
       top: 0;
       position: relative; } }
   .ftco-navbar-light .navbar-brand {
@@ -7368,7 +7368,7 @@ h1, h2, h3, h4, h5,
     color: rgba(255, 255, 255, 0.5); }
   .ftco-navbar-light .navbar-toggler {
     border: none;
-    color: gray !important;
+    color: gray ;
     cursor: pointer;
     padding-right: 0;
     text-transform: uppercase;
